add front card style

--- a/index.html
+++ b/index.html
@@ -37,10 +37,22 @@
         </div>
         <button>Confirm</button>
     </div>
-</div>
+</div>    
+  </div>
+  
+  <div class="card_front">
+    
+    <div class="filled_circle"></div>
+    <div class="empty_circle"></div>
+    <div class="card_int"><p>0000 0000 0000 0000</p></div>
+    <div class="mainCard">
+        <div class="cardHolderName"><p>Anahit Saroyan</p></div>
+        <div class="cardDate"><p>00/00</p></div>
     </div>
-    <div class="card-front"></div>
-    <div class="card-back"></div>
+</div>
+<div class="card_back">
+    
+</div>
     <script src="./script/index.js"></script>
 </body>
 </html>
