--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
         <br>
         <label for="cardNumber">
             <p> CARD NUMBER</p>          
-            <input type="text" id="cardNumber" placeholder="0000 0000 0000 0000">
+            <input type="number" id="cardNumber" placeholder="0000 0000 0000 0000">
         </label>
         <br>
         <div class="miniSection">
             <label>
                 <p> EXP. DATE (MM/YY)</p>             
-                <input type="text" placeholder="MM">
-                <input type="text" placeholder="YY">
+                <input type="text" placeholder="MM" id="mm">
+                <input type="text" placeholder="YY" id="yy">
             </label>
             <label>
                 <p> CVC</p>               
-                <input type="text" placeholder="000">
+                <input type="text" placeholder="000" id="cv">
             </label>
         </div>
-        <button>Confirm</button>
+        <button id="confirm">Confirm</button>
     </div>
 </div>    
   </div>
@@ -44,10 +44,10 @@
     
     <div class="filled_circle"></div>
     <div class="empty_circle"></div>
-    <div class="card_int"><p>0000 0000 0000 0000</p></div>
+    <div class="card_int" id="card_int">0000 0000 0000 0000</div>
     <div class="mainCard">
-        <div class="cardHolderName"><p>Anahit Saroyan</p></div>
-        <div class="cardDate"><p>00/00</p></div>
+        <div class="cardHolderName" id="cardHolderName">Anahit Saroyan</div>
+        <div class="cardDate" id="cardDate">00/00</div>
     </div>
 </div>
 <div class="card_back">
