--- a/index.html
+++ b/index.html
@@ -15,24 +15,28 @@
 <div class="main">
     <div class="section">
         <label for="cardHolder">
-            <p> CARDHOLDER NAME</p>           
+            <p>CARDHOLDER NAME</p>           
             <input type="text" id="cardHolder" placeholder="Anahit Saroyan">
+            <div class="blank" id="blankOne"></div>
         </label>
         <br>
         <label for="cardNumber">
             <p> CARD NUMBER</p>          
-            <input type="number" id="cardNumber" placeholder="0000 0000 0000 0000">
+            <input type="text" id="cardNumber" placeholder="0000 0000 0000 0000">
+            <div class="blank" id="blankTwo"></div>
         </label>
         <br>
         <div class="miniSection">
             <label>
                 <p> EXP. DATE (MM/YY)</p>             
-                <input type="text" placeholder="MM" id="mm">
-                <input type="text" placeholder="YY" id="yy">
+                <input type="text" placeholder="MM" id="mm" maxlength="2">
+                <input type="text" placeholder="YY" id="yy" maxlength="2">
+                <div class="blank" id="blankThree"></div>
             </label>
             <label>
                 <p> CVC</p>               
-                <input type="text" placeholder="000" id="cv">
+                <input type="text" placeholder="000" id="cvv" maxlength="3">
+                <div class="blank" id="blankFour"></div>
             </label>
         </div>
         <button id="confirm">Confirm</button>
@@ -53,6 +57,6 @@
 <div class="card_back">
     
 </div>
-    <script src="./script/index.js"></script>
+    <script src="./script/index.js" type="module"></script>
 </body>
 </html>
