--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="./images/bg-main-desktop.png" alt="">
 </div>
 <div class="main">
-    <div class="section">
+    <div class="section" id="section">
         <label for="cardHolder">
             <p>CARDHOLDER NAME</p>           
             <input type="text" id="cardHolder" placeholder="Anahit Saroyan">
@@ -22,7 +22,7 @@
         <br>
         <label for="cardNumber">
             <p> CARD NUMBER</p>          
-            <input type="text" id="cardNumber" placeholder="0000 0000 0000 0000">
+            <input type="text" id="cardNumber" placeholder="0000 0000 0000 0000" maxlength="16">
             <div class="blank" id="blankTwo"></div>
         </label>
         <br>
