add mobile version

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="root">
+    <div class="root" id="root">
 <div class="background">
     <img src="./images/bg-main-desktop.png" alt="">
 </div>
@@ -40,6 +40,12 @@
             </label>
         </div>
         <button id="confirm">Confirm</button>
+    </div>
+    <div class="window" id="window">
+        <h2>&#10003;</h2>
+        <h1>Thank You</h1>
+        <p>We have added your card details</p>
+        <button id="continue">Continue</button>
     </div>
 </div>    
   </div>
